2004-01-05  Richard M. Stallman  <rms@gnu.org>

	* finder.el (finder-commentary): Call delete-other-windows.

	* net/ange-ftp.el (ange-ftp-file-attributes):
	Pass 2 args to ange-ftp-real-file-attributes only if ID-FORMAT non-nil.

2004-01-04  Karl Berry  <karl@gnu.org>

	* emacs-lisp/copyright.el (copyright-regexp): allow the common
	comment characters % and # in the copyright year notice,
	as well as ;.

2004-01-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* wid-edit.el (default): Define dummy :value-delete.
	Reported by Jesper Harder <harder@ifa.au.dk>.

2004-01-03  Richard M. Stallman  <rms@gnu.org>

	* progmodes/compile.el (compile-internal): Use point, not point-min,
	for set-window-point.

	* textmodes/tex-mode.el (latex-find-indent): Avoid error at end of buf.

	* emacs-lisp/lisp-mnt.el (lm-section-end): require outline.

	* progmodes/grep.el (grep-mode-map):
	Don't remap next-line, previous-line.

2004-01-03  Eric M. Ludlam  <eric@siege-engine.com>

	* speedbar.el (speedbar-edit-line): Change regexp to position
	the cursor on the first character of this line's button.

2004-01-03  Luc Teirlinck  <teirllm@auburn.edu>

	* subr.el (functionp): Doc fix.

2004-01-03  Jesper Harder  <harder@ifa.au.dk>  (tiny change)

	* progmodes/idlwave.el (idlwave-make-tags):
	* textmodes/flyspell.el (flyspell-large-region):.
	* progmodes/make-mode.el (makefile-query-by-make-minus-q):
	* emulation/viper-util.el (viper-glob-unix-files):
	* emacs-lisp/shadow.el (shadow-same-file-or-nonexistent):
	* man.el (Man-init-defvars):
	* jka-compr.el (jka-compr-call-process):
	* files.el (get-free-disk-space,insert-directory):
	* ediff-ptch.el (ediff-test-patch-utility):
	* ediff-diff.el (ediff-test-utility):
	* dired-aux.el (dired-check-process):
	* mail/sendmail.el (sendmail-send-it): Don't use = or zerop to
	test the return value of call-process, because it can be a string.

2003-12-31  John Paul Wallington  <jpw@gnu.org>

	* bindings.el (completion-ignored-extensions): Add .pfsl.
