@@ -1,3 +1,8 @@
+2003-12-31  Simon Josefsson  <jas@extundo.com>
+
+	* files.el (before-save-hook): Add.
+	(basic-save-buffer): Use before-save-hook.
+
 2004-01-05  Richard M. Stallman  <rms@gnu.org>
 
 	* finder.el (finder-commentary): Call delete-other-windows.
